--- a/CSS/About.css
+++ b/CSS/About.css
@@ -13,11 +13,26 @@ nav{
   background-color:rgb(3, 135, 158);
   }
   .brand{
+    color: #fff;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    white-space: nowrap;
   margin-left: 5px;
+  margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
 }
 .links {
     padding-right: 0;
+    display: block;
+    padding: .5rem 1rem;
+    text-decoration: none;
     padding-left: 10px;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 a{
   color: #fff;
