--- a/CSS/About.css
+++ b/CSS/About.css
@@ -20,7 +20,7 @@ nav{
     font-size: 1.25rem;
     text-decoration: none;
     white-space: nowrap;
-  margin-left: 5px;
+  margin-left: 1rem;
   margin-top: 0;
     margin-bottom: .5rem;
     font-weight: 500;
@@ -31,7 +31,7 @@ nav{
     display: block;
     padding: .5rem 1rem;
     text-decoration: none;
-    padding-left: 10px;
+    padding-left: 1.5rem;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 a{
